Rewrite all 5 deep-dive files based on JDK source verification
All fabricated code/classes replaced with actual source-verified content.

jep-506-implementation.md (488 → 891 lines):
- ScopedValue: actual Carrier linked list, Snapshot, 2-way cache
- Corrected: removed fabricated AtomicInteger/Bindings class
- Added: bloom filter, ScopedValueContainer, @IntrinsicCandidate

jep-519-implementation.md (379 → 802 lines):
- Compact Headers: actual bit layout lock(2)+self_fwd(1)+age(4)+
  gap(4)+hash(31)+klass(22)=64 from markWord.hpp
- narrowKlass base+shift encoding from compressedKlass.hpp
- UseObjectMonitorTable requirement, prototype_header mechanism

jep-517-implementation.md (600 → 979 lines):
- HTTP/3: actual quic/(80+), http3/(21), qpack/(38) file structure
- QuicClient dual-channel, QuicConnection sealed hierarchy
- QPACK Encoder/Decoder with actual classes
- QuicCubicCongestionController with CUBIC constants

jep-522-implementation.md (401 → 775 lines):
- G1: actual dual card table from G1BarrierSet source
- 7-state refinement sweep state machine
- G1ChunkScanner word-level batch detection
- Removed fabricated benchmark numbers

jep-511-implementation.md (400 → 896 lines):
- javac: actual JCModuleImport AST node, TypeEnter.doModuleImport()
- Resolve.java lookup precedence (moduleImportScope = priority 6)
- 6 tree utility classes adapted
- Removed fabricated ModuleExportsCache/SnippetMaps

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>